# StarMe-Consumer

./: .project  starme-consumer.cabal
src/: Cassandra.hs  Consumer.hs  Github.hs  Main.hs  Models.hs
