name:           starme-consumer
version:        0.1
cabal-version:  >=1.8
build-type:     Simple
author:         sportanova

executable starme-consumer
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   base ==4.7.0.1
                     , cassandra-cql ==0.4.0.1
                     , uuid ==1.3.5
                     , random ==1.0.1.1
                     , http-types
                     , resourcet
                     , HTTP
                     , http-conduit ==2.1.5
                     , network
                     , amqp ==0.10.1
                     , text
                     , aeson
                     , bytestring
                     , transformers
                     , time
  ghc-options:     -Wall
  other-modules:   
                   Consumer,
                   Cassandra,
                   Models,
                   Github
